--- a/asset/css/base.css
+++ b/asset/css/base.css
@@ -21,11 +21,13 @@ body {
   border-radius: 40px;
   color: white;
   transition: all 0.4s;
+  border: 1px solid #fff;
 }
 
 .button:hover {
-  color: white;
+  color: var(--color-yellow);
   transition: all 0.4s;
+  border: 1px solid var(--color-yellow)
 }
 
 .button-yellow {
