--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -49,3 +49,41 @@
 .section1 .button:hover {
   color: var(--color-yellow);
 }
+
+/* section 9 */
+.section9 {
+  margin-top: 50px;
+}
+
+.section9 .row2 .tag {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.section9 .row2 .tag img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  margin-bottom: 20px;
+  border-radius: 15px;
+}
+
+.section9 .row2 .tag .tag-content .title {
+  font-size: 30px;
+  color: var(--color-black);
+}
+
+.section9 .row2 .tag .tag-content .title:hover {
+  color: var(--color-pink);
+}
+
+.section9 .row2 .tag .tag-content .desc {
+  margin: 20px 0 32px 0;
+  font-size: 20px;
+  color: var(--color-text);
+}
+
+.section9 .row2 .tag .tag-content .button {
+  padding: 12px 20px;
+  font-size: 13px;
+}
