--- a/asset/css/base.css
+++ b/asset/css/base.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
 :root {
-  --color-text-blue: #103178;
+  --color-text-blue: #35a2b8;
   --color-text-white: #fff;
   --color-yellow: #fec802;
   --color-purple: #8261ee;
